# studentifier

./: LICENSE  README.md  bonnie.toml  docker-compose.yml  render.yaml
client/: Dockerfile  angular.json  package-lock.json  package.json  tailwind.config.js
client/src/: index.html
client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
client/src/app/core/components/home/: home.component.html  home.component.ts
client/src/app/core/components/login/: login.component.css  login.component.html  login.component.ts
client/src/app/core/components/student-list/: student-list.component.css  student-list.component.html  student-list.component.ts
client/src/app/core/guards/: auth.guard.ts
client/src/app/core/services/: app.service.ts  auth.service.ts  student.service.ts
client/src/app/shared/models/: student.model.ts
client/src/environment/: environment.prod.ts  environment.ts
client/src/nginx/: nginx.conf
database/: Dockerfile
database/scripts/: test_data.surreal
server/: .env  Cargo.toml  Dockerfile
server/src/: controllers.rs  error.rs  main.rs  models.rs  prelude.rs  router.rs
server/src/controllers/: auth.rs  health.rs  info.rs  persons.rs
server/src/models/: auth.rs  info.rs  persons.rs
server/src/services/: auth.rs
server/src/util/: mod.rs  security.rs  surrealdb.rs
