[package]
name = "studentifier-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.1", features = ["headers"]}
bcrypt = "0.13.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
serde_json = "1.0.68"
simple_logger = "4.0.0"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
uuid = { version = "1.2.2", features = ["fast-rng", "v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.66"